# mprisctl

./: Cargo.toml
src/: basic_command.rs  format.rs  format_help.txt  list.rs  main.rs  metadata.rs  play.rs
src/format/: join.rs  mod.rs  or.rs  time.rs
