[package]
name = "mprisctl"
description = "CLI tool to control media players using the MPRIS2 protocol"
version = "0.1.0"
authors = ["Magnus Bergmark <magnus.bergmark@gmail.com>"]

[dependencies]
mpris = "1.0.0"
failure = "0.1.1"
clap = "2.30.0"
caseless = "0.2.0"
serde_json = "1.0.9"
serde_derive = "1.0.27"
serde = "1.0.27"
dbus = "0.6.1"
