[package]
name = "mprisctl"
description = "CLI tool to control media players using the MPRIS2 protocol"
version = "0.1.0"
authors = ["Magnus Bergmark <magnus.bergmark@gmail.com>"]
edition = "2018"

[dependencies]
mpris = "2.0.0-rc1"
failure = "0.1.1"
caseless = "0.2.0"
serde_json = "1.0.9"
serde_derive = "1.0.27"
serde = "1.0.27"
handlebars = "1.0.0-beta.1"
structopt = "0.2.14"
